--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -1,17 +1,17 @@
 %%
-%% This is file `sample-authordraft.tex',
+%% This is file `sample-sigplan.tex',
 %% generated with the docstrip utility.
 %%
 %% The original source files were:
 %%
-%% samples.dtx  (with options: `authordraft')
+%% samples.dtx  (with options: `sigplan')
 %% 
 %% IMPORTANT NOTICE:
 %% 
 %% For the copyright see the source file.
 %% 
 %% Any modified versions of this file must be renamed
-%% with new filenames distinct from sample-authordraft.tex.
+%% with new filenames distinct from sample-sigplan.tex.
 %% 
 %% For distribution of the original source see the terms
 %% for copying and modification in the file samples.dtx.
@@ -22,8 +22,7 @@
 %% in the same archive or directory.)
 %%
 %% The first command in your LaTeX source must be the \documentclass command.
-\documentclass[sigconf,authordraft]{acmart}
-
+\documentclass[sigplan,10pt,review]{acmart}\settopmatter{printfolios=true,printccs=false,printacmref=false}
 %%
 %% \BibTeX command to typeset BibTeX logo in the docs
 \AtBeginDocument{%
@@ -75,7 +74,7 @@
 %%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
-\title{The Name of the Title is Hope}
+\title{Visualizing CodeQL Queries in Visual Studio Code}
 
 %%
 %% The "author" command and its associated commands are used to define
@@ -218,7 +217,6 @@
 %% information and the body of the document, and typically spans the
 %% page.
 \begin{teaserfigure}
-  \includegraphics[width=\textwidth]{sampleteaser}
   \caption{Seattle Mariners at Spring Training, 2010.}
   \Description{Enjoying the baseball game from the third-base
   seats. Ichiro Suzuki preparing to bat.}
@@ -309,7 +307,7 @@ Frequently-used parameters, or combinations of parameters, include:
 This document uses the following string as the first command in the
 source file:
 \begin{verbatim}
-\documentclass[sigconf,authordraft]{acmart}
+\documentclass[sigplan,screen]{acmart}
 \end{verbatim}
 
 \section{Modifications}
@@ -558,7 +556,6 @@ third-party material, you must clearly identify it as such, as shown
 in the example below.
 \begin{figure}[h]
   \centering
-  \includegraphics[width=\linewidth]{sample-franklin}
   \caption{1907 Franklin Model D roadster. Photograph by Harris \&
     Ewing, Inc. [Public domain], via Wikimedia
     Commons. (\url{https://goo.gl/VLCRBB}).}
@@ -598,7 +595,6 @@ figure in your article, place the command immediately before the
 \verb|\maketitle| command:
 \begin{verbatim}
   \begin{teaserfigure}
-    \includegraphics[width=\textwidth]{sampleteaser}
     \caption{figure caption}
     \Description{figure description}
   \end{teaserfigure}
@@ -761,4 +757,4 @@ massa et mattis lacinia.
 \end{document}
 \endinput
 %%
-%% End of file `sample-authordraft.tex'.
+%% End of file `sample-sigplan.tex'.
