--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -143,7 +143,10 @@
 %% Note: \begin{abstract}...\end{abstract} environment must come
 %% before \maketitle command
 \begin{abstract}
-Text of abstract \ldots.
+CodeQL is a program analysis tool developed by Github Security Lab. Developers and researchers can identify software vulnerabilities and bugs with CodeQL by writing powerful queries  called QL. GitHub also developed a CodeQL Visual Studio Code extension, which is an open source project written in TypeScript, utilizing the CodeQL command line tool for the analysis service. This extension currently displays the analysis results in the table view. 
+\newline
+\indent In this paper, we present CodeQLVis, a CodeQL visualization tool integrated in Visual Studio Code which creates intuitive graphical representations of the analysis results from CodeQL. 
+
 \end{abstract}
 
 
@@ -171,7 +174,7 @@ Text of abstract \ldots.
 
 %% Keywords
 %% comma separated list
-\keywords{keyword1, keyword2, keyword3}  %% \keywords are mandatory in final camera-ready submission
+\keywords{Program Analysis, Developer Tools, Visualization}  %% \keywords are mandatory in final camera-ready submission
 
 
 %% \maketitle
@@ -182,8 +185,6 @@ Text of abstract \ldots.
 
 
 \section{Introduction}
-
-Text of paper \ldots
 
 
 %% Acknowledgments
