--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -145,7 +145,7 @@
 \begin{abstract}
 CodeQL is a program analysis tool developed by Github Security Lab. Developers and researchers can identify software vulnerabilities and bugs with CodeQL by writing powerful queries  called QL. GitHub also developed a CodeQL Visual Studio Code extension, which is an open source project written in TypeScript, utilizing the CodeQL command line tool for the analysis service. This extension currently displays the analysis results in the table view. 
 \newline
-\indent In this paper, we present CodeQLVis, a CodeQL visualization tool integrated in Visual Studio Code which creates intuitive graphical representations of the analysis results from CodeQL. 
+\indent In this paper, we present CodeQLVis - a CodeQL visualization tool integrated in Visual Studio Code which creates intuitive graphical representations of the analysis results from CodeQL. 
 
 \end{abstract}
 
