--- a/acmart.cls
+++ b/acmart.cls
@@ -1265,7 +1265,7 @@
 }
 \if@ACM@journal\else
 \acmConference[Conference'17]{ACM Conference}{July 2017}{Washington,
-  DC, USA}
+  DC, USA}%
 \fi
 \def\acmBooktitle#1{\gdef\@acmBooktitle{#1}}
 \acmBooktitle{Proceedings of \acmConference@name
