--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -206,7 +206,7 @@ CodeQL is a powerful code analysis engine that supports many mainstream programm
 
 
 \section{Overview of Approach}
-We built this visualization tool directly on top of the CodeQL Visual Studio Code extension, thanks to the fact this project is open sourced. For the visualization part, we utilized the WebView APIs provided by VSCode for rendering the UI. 
+We built this visualization tool directly on top of the CodeQL Visual Studio Code extension, thanks to the fact this project is open sourced. For the visualization part, we utilized the WebView APIs provided by VSCode for rendering the UI. \[To be completed\] \dots
 
 \begin{figure}[h]
   \centering
@@ -215,13 +215,13 @@ We built this visualization tool directly on top of the CodeQL Visual Studio Cod
 \end{figure}
 
 \section{More Details about Approach}
-
+\[To be completed\] 
 \section{Evaluation}
-
+\[To be completed\] 
 \section{Discussion}
-
+\[To be completed\] 
 \section{Related Work}
-
+\[To be completed\] 
 \section{conclusion}
 
 
