Small typo fixes to other sections

--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -185,7 +185,7 @@ CodeQL is a program analysis tool developed by Github Security Lab. Developers a
 
 
 \section{Introduction and Motivation}
-CodeQL is a powerful code analysis engine that supports many mainstream programming languages such as Java, C\#, Python and JavaScript etc. Developers are able to use CodeQL to quickly perform data-flow analyses on their programs and identity software vulnerabilities such as taint flows, or to acquire programs' properties such as call graphs. 
+CodeQL is a powerful code analysis engine that supports many mainstream programming languages such as Java, C\#, Python, JavaScript and more. Developers are able to use CodeQL to quickly perform data-flow analyses on their programs and identity software vulnerabilities such as taint flows, or to acquire programs' properties such as call graphs. 
 \newline
 \indent Existing tools leveraging CodeQL on the market display the analysis results only in text-based methods, which is not very straightforward and requires users to have knowledge in program analysis to understand. For example, LGTM has tools that make it easier to understand data flow analysis performed with CodeQL. The way they explore data flow paths is with a series of code snippets. CodeQL Visual Studio Code extension only outputs the analysis results in tabular view.
 \newline
@@ -222,7 +222,7 @@ We built this visualization tool directly on top of the CodeQL Visual Studio Cod
 \[To be completed\] 
 \section{Related Work}
 \[To be completed\] 
-\section{conclusion}
+\section{Conclusion}
 
 
 \end{document}
