new line in introduction

--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -189,7 +189,9 @@ CodeQL is a powerful code analysis engine that supports many mainstream programm
 \newline
 \indent Existing tools leveraging CodeQL on the market display the analysis results only in text-based methods, which is not very straightforward and requires users to have knowledge in program analysis to understand. For example, LGTM has tools that make it easier to understand data-flow analysis performed with CodeQL. The way they explore data flow paths is with a series of code snippets. CodeQL Visual Studio Code extension only outputs the analysis results in tabular view.
 \newline
-\indent Semmle, the company behind CodeQL, has been acquired by GitHub and widespread public support for CodeQL has resulted. The popularity of this tool, and the lack of visualization support, has given us reason to explore this problem. We've narrowed our scope in this domain to visualizing dataflow analysis, particularly as it pertains to taint-flow tracking. Therefore, in order to convey a complete and intuitive picture of a system more quickly than text-based methods, we have extended the CodeQL for Visual Studio Code extension to support taint-flow graph visualizations.
+\indent Semmle, the company behind CodeQL, has been acquired by GitHub and widespread public support for CodeQL has resulted. The popularity of this tool, and the lack of visualization support, has given us reason to explore this problem. We've narrowed our scope in this domain to visualizing dataflow analysis, particularly as it pertains to taint-flow tracking. 
+\newline
+\indent Therefore, in order to convey a complete and intuitive picture of a system more quickly than text-based methods, we have extended the CodeQL for Visual Studio Code extension to support taint-flow graph visualizations.
 
 \begin{figure}[h]
   \centering
