--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -220,7 +220,7 @@ Visual Studio Code extensions are in-editor tools that are created by their comm
 \section{Overview}
 Thanks to the fact that CodeQL VSCode extension is open sourced, we built our visualization tool by extending this existing CodeQL extension. For the visualization part, we utilized the WebView APIs provided by VSCode and visualization libraries available for rendering the UI. 
 \newline
-\indent CodeQLVis will be provided as an alternative to CodeQL VSCode extension's default way of redering the results in tabular view. Users can easily switch between using the default or CodeQLVis. More details of the implementation of CodeQLVis will be described in the following section.
+\indent CodeQLVis will be provided as an alternative to CodeQL VSCode extension's default way of rendering the results in tabular view. Users can easily switch between using the default or CodeQLVis. More details of the implementation of CodeQLVis will be described in the following section.
 
 \begin{figure}[h]
   \centering
